OkCompile-master/parser.output
Terminals unused in grammar

   LETTER
   DIGIT
   NON_ZERO_DIGIT
   HASH_KW
   WHITE_SPACE
   LETDIG
   WITHOUT_N
   COMMENT
   UNARY_MATH_OP_KW
   MATH_OP_ASSIGN_KW
   RECORD_KW
   STATIC_KW
   TYPESPECIFIER_KW
   PUNC_KW
   ASSIGN_KW
   NOT


Grammar

    0 $accept: Program $end

    1 Program: DeclarationList

    2 DeclarationList: DeclarationList Declaration
    3                | Declaration

    4 Declaration: VarDeclaration
    5            | FunDeclaration
    6            | RecDeclaration

    7 VarDeclaration: TypeSpecifier VarDeclList ";"

    8 RecDeclaration: "record" ID "{" LocalDeclarations "}"

    9 ScopedVarDelaration: ScopedTypeSpecifer VarDeclList ";"

   10 VarDeclList: VarDeclList "," VarDeclInitialize
   11            | VarDeclInitialize

   12 VarDeclInitialize: VarDeclId
   13                  | VarDeclId ":" SimpleExpression

   14 VarDeclId: ID
   15          | ID "[" NUMCONST "]"

   16 ScopedTypeSpecifer: "static" TypeSpecifier
   17                   | TypeSpecifier

   18 TypeSpecifier: ReturnTypeSpecifer
   19              | "RECTYPE"

   20 ReturnTypeSpecifer: "int"
   21                   | "real"
   22                   | "bool"
   23                   | "char"

   24 FunDeclaration: TypeSpecifier ID "(" Params ")" Statement
   25               | ID "(" Params ")" Statement

   26 Params: ParamList
   27       | /* empty */

   28 ParamList: ParamList ";" ParamTypeList
   29          | ParamTypeList

   30 ParamTypeList: TypeSpecifier ParamIdList

   31 ParamIdList: ParamIdList "," ParamId
   32            | ParamId

   33 ParamId: ID
   34        | ID "[" "]"

   35 Statement: ExpressionStmt
   36          | CompoundStmt
   37          | SelectionStmt
   38          | ItereationStmt
   39          | ReturnStmt
   40          | BreakStmt

   41 CompoundStmt: "{" LocalDeclarations StatementList "}"

   42 LocalDeclarations: LocalDeclarations ScopedVarDelaration
   43                  | /* empty */

   44 StatementList: StatementList Statement
   45              | /* empty */

   46 ExpressionStmt: Expression ";"
   47               | ";"

   48 SelectionStmt: IF_KW "(" SimpleExpression ")" Statement
   49              | IF_KW "(" SimpleExpression ")" Statement ELSE_KW Statement
   50              | SWITCH_KW "(" SimpleExpression ")" CaseElement DefaultElement END_KW

   51 CaseElement: CASE_KW NUMCONST ":" Statement ";"
   52            | CaseElement CASE_KW NUMCONST ":" Statement ";"

   53 DefaultElement: DEFAULT_KW ":" Statement ";"

   54 ItereationStmt: WHILE_KW "(" SimpleExpression ")" Statement

   55 ReturnStmt: RETURN_KW ";"
   56           | RETURN_KW Expression ";"

   57 BreakStmt: BREAK_KW ";"

   58 Expression: Mutable "=" Expression
   59           | Mutable "+=" Expression
   60           | Mutable "-=" Expression
   61           | Mutable "*=" Expression
   62           | Mutable "/=" Expression
   63           | Mutable "+" "+"
   64           | Mutable "-" "-"
   65           | SimpleExpression

   66 SimpleExpression: RelExpression OR_KW SimpleExpression
   67                 | RelExpression AND_KW SimpleExpression
   68                 | RelExpression OrElseRel
   69                 | RelExpression AndThenRel
   70                 | NOT_KW SimpleExpression
   71                 | RelExpression

   72 OrElseRel: OR_KW ELSE_KW SimpleExpression

   73 AndThenRel: AND_KW THEN_KW SimpleExpression

   74 RelExpression: MathLogicExpression REL_OP_KW MathLogicExpression
   75              | MathLogicExpression

   76 MathLogicExpression: MathLogicExpression MATH_OP_KW UnaryExpression
   77                    | UnaryExpression

   78 UnaryExpression: UNARY_OP_KW UnaryExpression
   79                | Factor

   80 Factor: Mutable
   81       | Immutable

   82 Mutable: ID
   83        | Mutable "[" Expression "]"
   84        | Mutable "." ID

   85 Immutable: "(" Expression ")"
   86          | Call
   87          | Constant

   88 Call: ID "(" Args ")"

   89 Args: ArgList
   90     | /* empty */

   91 ArgList: ArgList "," Expression
   92        | Expression

   93 Constant: NUMCONST
   94         | REALCONST
   95         | CHARCONST
   96         | BOOL_KW


Terminals, with rules where they appear

$end (0) 0
error (256)
LETTER (258)
DIGIT (259)
NON_ZERO_DIGIT (260)
HASH_KW (261)
BOOL_KW (262) 96
WHITE_SPACE (263)
LETDIG (264)
ID (265) 8 14 15 24 25 33 34 82 84 88
NUMCONST (266) 15 51 52 93
WITHOUT_N (267)
CHARCONST (268) 95
COMMENT (269)
REALCONST (270) 94
OR_KW (271) 66 72
AND_KW (272) 67 73
ELSE_KW (273) 49 72
THEN_KW (274) 73
NOT_KW (275) 70
IF_KW (276) 48 49
END_KW (277) 50
SWITCH_KW (278) 50
WHILE_KW (279) 54
CASE_KW (280) 51 52
DEFAULT_KW (281) 53
BREAK_KW (282) 57
REL_OP_KW (283) 74
MATH_OP_KW (284) 76
UNARY_MATH_OP_KW (285)
MATH_OP_ASSIGN_KW (286)
UNARY_OP_KW (287) 78
RETURN_KW (288) 55 56
RECORD_KW (289)
STATIC_KW (290)
TYPESPECIFIER_KW (291)
PUNC_KW (292)
ASSIGN_KW (293)
NOT (294)
"simpleOr" (295)
"simpleAnd" (296)
"andThen" (297)
"orElse" (298)
"then" (299)
";" (300) 7 9 28 46 47 51 52 53 55 56 57
"record" (301) 8
"{" (302) 8 41
"}" (303) 8 41
"," (304) 10 31 91
":" (305) 13 51 52 53
"[" (306) 15 34 83
"]" (307) 15 34 83
"static" (308) 16
"RECTYPE" (309) 19
"int" (310) 20
"real" (311) 21
"bool" (312) 22
"char" (313) 23
"(" (314) 24 25 48 49 50 54 85 88
")" (315) 24 25 48 49 50 54 85 88
"=" (316) 58
"+=" (317) 59
"-=" (318) 60
"*=" (319) 61
"/=" (320) 62
"+" (321) 63
"-" (322) 64
"." (323) 84


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
Program (70)
    on left: 1, on right: 0
DeclarationList (71)
    on left: 2 3, on right: 1 2
Declaration (72)
    on left: 4 5 6, on right: 2 3
VarDeclaration (73)
    on left: 7, on right: 4
RecDeclaration (74)
    on left: 8, on right: 6
ScopedVarDelaration (75)
    on left: 9, on right: 42
VarDeclList (76)
    on left: 10 11, on right: 7 9 10
VarDeclInitialize (77)
    on left: 12 13, on right: 10 11
VarDeclId (78)
    on left: 14 15, on right: 12 13
ScopedTypeSpecifer (79)
    on left: 16 17, on right: 9
TypeSpecifier (80)
    on left: 18 19, on right: 7 16 17 24 30
ReturnTypeSpecifer (81)
    on left: 20 21 22 23, on right: 18
FunDeclaration (82)
    on left: 24 25, on right: 5
Params (83)
    on left: 26 27, on right: 24 25
ParamList (84)
    on left: 28 29, on right: 26 28
ParamTypeList (85)
    on left: 30, on right: 28 29
ParamIdList (86)
    on left: 31 32, on right: 30 31
ParamId (87)
    on left: 33 34, on right: 31 32
Statement (88)
    on left: 35 36 37 38 39 40, on right: 24 25 44 48 49 51 52 53 54
CompoundStmt (89)
    on left: 41, on right: 36
LocalDeclarations (90)
    on left: 42 43, on right: 8 41 42
StatementList (91)
    on left: 44 45, on right: 41 44
ExpressionStmt (92)
    on left: 46 47, on right: 35
SelectionStmt (93)
    on left: 48 49 50, on right: 37
CaseElement (94)
    on left: 51 52, on right: 50 52
DefaultElement (95)
    on left: 53, on right: 50
ItereationStmt (96)
    on left: 54, on right: 38
ReturnStmt (97)
    on left: 55 56, on right: 39
BreakStmt (98)
    on left: 57, on right: 40
Expression (99)
    on left: 58 59 60 61 62 63 64 65, on right: 46 56 58 59 60 61 62
    83 85 91 92
SimpleExpression (100)
    on left: 66 67 68 69 70 71, on right: 13 48 49 50 54 65 66 67 70
    72 73
OrElseRel (101)
    on left: 72, on right: 68
AndThenRel (102)
    on left: 73, on right: 69
RelExpression (103)
    on left: 74 75, on right: 66 67 68 69 71
MathLogicExpression (104)
    on left: 76 77, on right: 74 75 76
UnaryExpression (105)
    on left: 78 79, on right: 76 77 78
Factor (106)
    on left: 80 81, on right: 79
Mutable (107)
    on left: 82 83 84, on right: 58 59 60 61 62 63 64 80 83 84
Immutable (108)
    on left: 85 86 87, on right: 81
Call (109)
    on left: 88, on right: 86
Args (110)
    on left: 89 90, on right: 88
ArgList (111)
    on left: 91 92, on right: 89 91
Constant (112)
    on left: 93 94 95 96, on right: 87


state 0

    0 $accept: . Program $end

    ID         shift, and go to state 1
    "record"   shift, and go to state 2
    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    Program             go to state 8
    DeclarationList     go to state 9
    Declaration         go to state 10
    VarDeclaration      go to state 11
    RecDeclaration      go to state 12
    TypeSpecifier       go to state 13
    ReturnTypeSpecifer  go to state 14
    FunDeclaration      go to state 15


state 1

   25 FunDeclaration: ID . "(" Params ")" Statement

    "("  shift, and go to state 16


state 2

    8 RecDeclaration: "record" . ID "{" LocalDeclarations "}"

    ID  shift, and go to state 17


state 3

   19 TypeSpecifier: "RECTYPE" .

    $default  reduce using rule 19 (TypeSpecifier)


state 4

   20 ReturnTypeSpecifer: "int" .

    $default  reduce using rule 20 (ReturnTypeSpecifer)


state 5

   21 ReturnTypeSpecifer: "real" .

    $default  reduce using rule 21 (ReturnTypeSpecifer)


state 6

   22 ReturnTypeSpecifer: "bool" .

    $default  reduce using rule 22 (ReturnTypeSpecifer)


state 7

   23 ReturnTypeSpecifer: "char" .

    $default  reduce using rule 23 (ReturnTypeSpecifer)


state 8

    0 $accept: Program . $end

    $end  shift, and go to state 18


state 9

    1 Program: DeclarationList .
    2 DeclarationList: DeclarationList . Declaration

    ID         shift, and go to state 1
    "record"   shift, and go to state 2
    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    $default  reduce using rule 1 (Program)

    Declaration         go to state 19
    VarDeclaration      go to state 11
    RecDeclaration      go to state 12
    TypeSpecifier       go to state 13
    ReturnTypeSpecifer  go to state 14
    FunDeclaration      go to state 15


state 10

    3 DeclarationList: Declaration .

    $default  reduce using rule 3 (DeclarationList)


state 11

    4 Declaration: VarDeclaration .

    $default  reduce using rule 4 (Declaration)


state 12

    6 Declaration: RecDeclaration .

    $default  reduce using rule 6 (Declaration)


state 13

    7 VarDeclaration: TypeSpecifier . VarDeclList ";"
   24 FunDeclaration: TypeSpecifier . ID "(" Params ")" Statement

    ID  shift, and go to state 20

    VarDeclList        go to state 21
    VarDeclInitialize  go to state 22
    VarDeclId          go to state 23


state 14

   18 TypeSpecifier: ReturnTypeSpecifer .

    $default  reduce using rule 18 (TypeSpecifier)


state 15

    5 Declaration: FunDeclaration .

    $default  reduce using rule 5 (Declaration)


state 16

   25 FunDeclaration: ID "(" . Params ")" Statement

    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    $default  reduce using rule 27 (Params)

    TypeSpecifier       go to state 24
    ReturnTypeSpecifer  go to state 14
    Params              go to state 25
    ParamList           go to state 26
    ParamTypeList       go to state 27


state 17

    8 RecDeclaration: "record" ID . "{" LocalDeclarations "}"

    "{"  shift, and go to state 28


state 18

    0 $accept: Program $end .

    $default  accept


state 19

    2 DeclarationList: DeclarationList Declaration .

    $default  reduce using rule 2 (DeclarationList)


state 20

   14 VarDeclId: ID .
   15          | ID . "[" NUMCONST "]"
   24 FunDeclaration: TypeSpecifier ID . "(" Params ")" Statement

    "["  shift, and go to state 29
    "("  shift, and go to state 30

    $default  reduce using rule 14 (VarDeclId)


state 21

    7 VarDeclaration: TypeSpecifier VarDeclList . ";"
   10 VarDeclList: VarDeclList . "," VarDeclInitialize

    ";"  shift, and go to state 31
    ","  shift, and go to state 32


state 22

   11 VarDeclList: VarDeclInitialize .

    $default  reduce using rule 11 (VarDeclList)


state 23

   12 VarDeclInitialize: VarDeclId .
   13                  | VarDeclId . ":" SimpleExpression

    ":"  shift, and go to state 33

    $default  reduce using rule 12 (VarDeclInitialize)


state 24

   30 ParamTypeList: TypeSpecifier . ParamIdList

    ID  shift, and go to state 34

    ParamIdList  go to state 35
    ParamId      go to state 36


state 25

   25 FunDeclaration: ID "(" Params . ")" Statement

    ")"  shift, and go to state 37


state 26

   26 Params: ParamList .
   28 ParamList: ParamList . ";" ParamTypeList

    ";"  shift, and go to state 38

    $default  reduce using rule 26 (Params)


state 27

   29 ParamList: ParamTypeList .

    $default  reduce using rule 29 (ParamList)


state 28

    8 RecDeclaration: "record" ID "{" . LocalDeclarations "}"

    $default  reduce using rule 43 (LocalDeclarations)

    LocalDeclarations  go to state 39


state 29

   15 VarDeclId: ID "[" . NUMCONST "]"

    NUMCONST  shift, and go to state 40


state 30

   24 FunDeclaration: TypeSpecifier ID "(" . Params ")" Statement

    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    $default  reduce using rule 27 (Params)

    TypeSpecifier       go to state 24
    ReturnTypeSpecifer  go to state 14
    Params              go to state 41
    ParamList           go to state 26
    ParamTypeList       go to state 27


state 31

    7 VarDeclaration: TypeSpecifier VarDeclList ";" .

    $default  reduce using rule 7 (VarDeclaration)


state 32

   10 VarDeclList: VarDeclList "," . VarDeclInitialize

    ID  shift, and go to state 42

    VarDeclInitialize  go to state 43
    VarDeclId          go to state 23


state 33

   13 VarDeclInitialize: VarDeclId ":" . SimpleExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    SimpleExpression     go to state 52
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 57
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 34

   33 ParamId: ID .
   34        | ID . "[" "]"

    "["  shift, and go to state 61

    $default  reduce using rule 33 (ParamId)


state 35

   30 ParamTypeList: TypeSpecifier ParamIdList .
   31 ParamIdList: ParamIdList . "," ParamId

    ","  shift, and go to state 62

    $default  reduce using rule 30 (ParamTypeList)


state 36

   32 ParamIdList: ParamId .

    $default  reduce using rule 32 (ParamIdList)


state 37

   25 FunDeclaration: ID "(" Params ")" . Statement

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    IF_KW        shift, and go to state 63
    SWITCH_KW    shift, and go to state 64
    WHILE_KW     shift, and go to state 65
    BREAK_KW     shift, and go to state 66
    UNARY_OP_KW  shift, and go to state 50
    RETURN_KW    shift, and go to state 67
    ";"          shift, and go to state 68
    "{"          shift, and go to state 69
    "("          shift, and go to state 51

    Statement            go to state 70
    CompoundStmt         go to state 71
    ExpressionStmt       go to state 72
    SelectionStmt        go to state 73
    ItereationStmt       go to state 74
    ReturnStmt           go to state 75
    BreakStmt            go to state 76
    Expression           go to state 77
    SimpleExpression     go to state 78
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 79
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 38

   28 ParamList: ParamList ";" . ParamTypeList

    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    TypeSpecifier       go to state 24
    ReturnTypeSpecifer  go to state 14
    ParamTypeList       go to state 80


state 39

    8 RecDeclaration: "record" ID "{" LocalDeclarations . "}"
   42 LocalDeclarations: LocalDeclarations . ScopedVarDelaration

    "}"        shift, and go to state 81
    "static"   shift, and go to state 82
    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    ScopedVarDelaration  go to state 83
    ScopedTypeSpecifer   go to state 84
    TypeSpecifier        go to state 85
    ReturnTypeSpecifer   go to state 14


state 40

   15 VarDeclId: ID "[" NUMCONST . "]"

    "]"  shift, and go to state 86


state 41

   24 FunDeclaration: TypeSpecifier ID "(" Params . ")" Statement

    ")"  shift, and go to state 87


state 42

   14 VarDeclId: ID .
   15          | ID . "[" NUMCONST "]"

    "["  shift, and go to state 29

    $default  reduce using rule 14 (VarDeclId)


state 43

   10 VarDeclList: VarDeclList "," VarDeclInitialize .

    $default  reduce using rule 10 (VarDeclList)


state 44

   96 Constant: BOOL_KW .

    $default  reduce using rule 96 (Constant)


state 45

   82 Mutable: ID .
   88 Call: ID . "(" Args ")"

    "("  shift, and go to state 88

    $default  reduce using rule 82 (Mutable)


state 46

   93 Constant: NUMCONST .

    $default  reduce using rule 93 (Constant)


state 47

   95 Constant: CHARCONST .

    $default  reduce using rule 95 (Constant)


state 48

   94 Constant: REALCONST .

    $default  reduce using rule 94 (Constant)


state 49

   70 SimpleExpression: NOT_KW . SimpleExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    SimpleExpression     go to state 89
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 57
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 50

   78 UnaryExpression: UNARY_OP_KW . UnaryExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    UnaryExpression  go to state 90
    Factor           go to state 56
    Mutable          go to state 57
    Immutable        go to state 58
    Call             go to state 59
    Constant         go to state 60


state 51

   85 Immutable: "(" . Expression ")"

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    Expression           go to state 91
    SimpleExpression     go to state 78
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 79
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 52

   13 VarDeclInitialize: VarDeclId ":" SimpleExpression .

    $default  reduce using rule 13 (VarDeclInitialize)


state 53

   66 SimpleExpression: RelExpression . OR_KW SimpleExpression
   67                 | RelExpression . AND_KW SimpleExpression
   68                 | RelExpression . OrElseRel
   69                 | RelExpression . AndThenRel
   71                 | RelExpression .

    OR_KW   shift, and go to state 92
    AND_KW  shift, and go to state 93

    $default  reduce using rule 71 (SimpleExpression)

    OrElseRel   go to state 94
    AndThenRel  go to state 95


state 54

   74 RelExpression: MathLogicExpression . REL_OP_KW MathLogicExpression
   75              | MathLogicExpression .
   76 MathLogicExpression: MathLogicExpression . MATH_OP_KW UnaryExpression

    REL_OP_KW   shift, and go to state 96
    MATH_OP_KW  shift, and go to state 97

    $default  reduce using rule 75 (RelExpression)


state 55

   77 MathLogicExpression: UnaryExpression .

    $default  reduce using rule 77 (MathLogicExpression)


state 56

   79 UnaryExpression: Factor .

    $default  reduce using rule 79 (UnaryExpression)


state 57

   80 Factor: Mutable .
   83 Mutable: Mutable . "[" Expression "]"
   84        | Mutable . "." ID

    "["  shift, and go to state 98
    "."  shift, and go to state 99

    $default  reduce using rule 80 (Factor)


state 58

   81 Factor: Immutable .

    $default  reduce using rule 81 (Factor)


state 59

   86 Immutable: Call .

    $default  reduce using rule 86 (Immutable)


state 60

   87 Immutable: Constant .

    $default  reduce using rule 87 (Immutable)


state 61

   34 ParamId: ID "[" . "]"

    "]"  shift, and go to state 100


state 62

   31 ParamIdList: ParamIdList "," . ParamId

    ID  shift, and go to state 34

    ParamId  go to state 101


state 63

   48 SelectionStmt: IF_KW . "(" SimpleExpression ")" Statement
   49              | IF_KW . "(" SimpleExpression ")" Statement ELSE_KW Statement

    "("  shift, and go to state 102


state 64

   50 SelectionStmt: SWITCH_KW . "(" SimpleExpression ")" CaseElement DefaultElement END_KW

    "("  shift, and go to state 103


state 65

   54 ItereationStmt: WHILE_KW . "(" SimpleExpression ")" Statement

    "("  shift, and go to state 104


state 66

   57 BreakStmt: BREAK_KW . ";"

    ";"  shift, and go to state 105


state 67

   55 ReturnStmt: RETURN_KW . ";"
   56           | RETURN_KW . Expression ";"

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    ";"          shift, and go to state 106
    "("          shift, and go to state 51

    Expression           go to state 107
    SimpleExpression     go to state 78
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 79
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 68

   47 ExpressionStmt: ";" .

    $default  reduce using rule 47 (ExpressionStmt)


state 69

   41 CompoundStmt: "{" . LocalDeclarations StatementList "}"

    $default  reduce using rule 43 (LocalDeclarations)

    LocalDeclarations  go to state 108


state 70

   25 FunDeclaration: ID "(" Params ")" Statement .

    $default  reduce using rule 25 (FunDeclaration)


state 71

   36 Statement: CompoundStmt .

    $default  reduce using rule 36 (Statement)


state 72

   35 Statement: ExpressionStmt .

    $default  reduce using rule 35 (Statement)


state 73

   37 Statement: SelectionStmt .

    $default  reduce using rule 37 (Statement)


state 74

   38 Statement: ItereationStmt .

    $default  reduce using rule 38 (Statement)


state 75

   39 Statement: ReturnStmt .

    $default  reduce using rule 39 (Statement)


state 76

   40 Statement: BreakStmt .

    $default  reduce using rule 40 (Statement)


state 77

   46 ExpressionStmt: Expression . ";"

    ";"  shift, and go to state 109


state 78

   65 Expression: SimpleExpression .

    $default  reduce using rule 65 (Expression)


state 79

   58 Expression: Mutable . "=" Expression
   59           | Mutable . "+=" Expression
   60           | Mutable . "-=" Expression
   61           | Mutable . "*=" Expression
   62           | Mutable . "/=" Expression
   63           | Mutable . "+" "+"
   64           | Mutable . "-" "-"
   80 Factor: Mutable .
   83 Mutable: Mutable . "[" Expression "]"
   84        | Mutable . "." ID

    "["   shift, and go to state 98
    "="   shift, and go to state 110
    "+="  shift, and go to state 111
    "-="  shift, and go to state 112
    "*="  shift, and go to state 113
    "/="  shift, and go to state 114
    "+"   shift, and go to state 115
    "-"   shift, and go to state 116
    "."   shift, and go to state 99

    $default  reduce using rule 80 (Factor)


state 80

   28 ParamList: ParamList ";" ParamTypeList .

    $default  reduce using rule 28 (ParamList)


state 81

    8 RecDeclaration: "record" ID "{" LocalDeclarations "}" .

    $default  reduce using rule 8 (RecDeclaration)


state 82

   16 ScopedTypeSpecifer: "static" . TypeSpecifier

    "RECTYPE"  shift, and go to state 3
    "int"      shift, and go to state 4
    "real"     shift, and go to state 5
    "bool"     shift, and go to state 6
    "char"     shift, and go to state 7

    TypeSpecifier       go to state 117
    ReturnTypeSpecifer  go to state 14


state 83

   42 LocalDeclarations: LocalDeclarations ScopedVarDelaration .

    $default  reduce using rule 42 (LocalDeclarations)


state 84

    9 ScopedVarDelaration: ScopedTypeSpecifer . VarDeclList ";"

    ID  shift, and go to state 42

    VarDeclList        go to state 118
    VarDeclInitialize  go to state 22
    VarDeclId          go to state 23


state 85

   17 ScopedTypeSpecifer: TypeSpecifier .

    $default  reduce using rule 17 (ScopedTypeSpecifer)


state 86

   15 VarDeclId: ID "[" NUMCONST "]" .

    $default  reduce using rule 15 (VarDeclId)


state 87

   24 FunDeclaration: TypeSpecifier ID "(" Params ")" . Statement

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    IF_KW        shift, and go to state 63
    SWITCH_KW    shift, and go to state 64
    WHILE_KW     shift, and go to state 65
    BREAK_KW     shift, and go to state 66
    UNARY_OP_KW  shift, and go to state 50
    RETURN_KW    shift, and go to state 67
    ";"          shift, and go to state 68
    "{"          shift, and go to state 69
    "("          shift, and go to state 51

    Statement            go to state 119
    CompoundStmt         go to state 71
    ExpressionStmt       go to state 72
    SelectionStmt        go to state 73
    ItereationStmt       go to state 74
    ReturnStmt           go to state 75
    BreakStmt            go to state 76
    Expression           go to state 77
    SimpleExpression     go to state 78
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 79
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 88

   88 Call: ID "(" . Args ")"

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    $default  reduce using rule 90 (Args)

    Expression           go to state 120
    SimpleExpression     go to state 78
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 79
    Immutable            go to state 58
    Call                 go to state 59
    Args                 go to state 121
    ArgList              go to state 122
    Constant             go to state 60


state 89

   70 SimpleExpression: NOT_KW SimpleExpression .

    $default  reduce using rule 70 (SimpleExpression)


state 90

   78 UnaryExpression: UNARY_OP_KW UnaryExpression .

    $default  reduce using rule 78 (UnaryExpression)


state 91

   85 Immutable: "(" Expression . ")"

    ")"  shift, and go to state 123


state 92

   66 SimpleExpression: RelExpression OR_KW . SimpleExpression
   72 OrElseRel: OR_KW . ELSE_KW SimpleExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    ELSE_KW      shift, and go to state 124
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    SimpleExpression     go to state 125
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 57
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 93

   67 SimpleExpression: RelExpression AND_KW . SimpleExpression
   73 AndThenRel: AND_KW . THEN_KW SimpleExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    THEN_KW      shift, and go to state 126
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    SimpleExpression     go to state 127
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 57
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 94

   68 SimpleExpression: RelExpression OrElseRel .

    $default  reduce using rule 68 (SimpleExpression)


state 95

   69 SimpleExpression: RelExpression AndThenRel .

    $default  reduce using rule 69 (SimpleExpression)


state 96

   74 RelExpression: MathLogicExpression REL_OP_KW . MathLogicExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    MathLogicExpression  go to state 128
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 57
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 97

   76 MathLogicExpression: MathLogicExpression MATH_OP_KW . UnaryExpression

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    UnaryExpression  go to state 129
    Factor           go to state 56
    Mutable          go to state 57
    Immutable        go to state 58
    Call             go to state 59
    Constant         go to state 60


state 98

   83 Mutable: Mutable "[" . Expression "]"

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51

    Expression           go to state 130
    SimpleExpression     go to state 78
    RelExpression        go to state 53
    MathLogicExpression  go to state 54
    UnaryExpression      go to state 55
    Factor               go to state 56
    Mutable              go to state 79
    Immutable            go to state 58
    Call                 go to state 59
    Constant             go to state 60


state 99

   84 Mutable: Mutable "." . ID

    ID  shift, and go to state 131


state 100

   34 ParamId: ID "[" "]" .

    $default  reduce using rule 34 (ParamId)


state 101

   31 ParamIdList: ParamIdList "," ParamId .

    $default  reduce using rule 31 (ParamIdList)


state 102

   48 SelectionStmt: IF_KW "(" . SimpleExpression ")" Statement
   49              | IF_KW "(" . SimpleExpression ")" Statement ELSE_KW Statement

    BOOL_KW      shift, and go to state 44
    ID           shift, and go to state 45
    NUMCONST     shift, and go to state 46
    CHARCONST    shift, and go to state 47
    REALCONST    shift, and go to state 48
    NOT_KW       shift, and go to state 49
    UNARY_OP_KW  shift, and go to state 50
    "("          shift, and go to state 51
